# hackathon

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  train.py
backend/: Dockerfile  gradcam.py  main.py  models.py  routes.py  schemas.py  utils.py
checkpoints/: training_history.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: AIChatbot.jsx  DotGrid.jsx
frontend/src/context/: AppContext.jsx
frontend/src/pages/: AIReviewInProgress.jsx  AuthenticationChoice.jsx  DoctorDashboard.jsx  DoctorRegistration.jsx  DoctorResults.jsx  LoginScreen.jsx  PatientDashboard.jsx  PatientRegistration.jsx  PatientResults.jsx  RoleSelection.jsx
frontend/src/services/: api.js
